ligolang/src/test/contracts/negative/error_typer_6.mligo
let foo : (int, string) map = (Map.literal [] : (int, bool) map)
let main (p:int) (storage : int) =
  (([] : operation list) , p)
